--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint.fix": "eslint . --ext ts,tsx --fix",
     "preview": "vite preview",
     "format": "prettier --write .",
     "checks": "prettier --check .",
@@ -20,6 +21,10 @@
     "src/**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.3",
+    "eslint-plugin-react": "^7.33.0",
+    "jest": "^29.6.1",
     "lint-staged": "^13.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -32,6 +37,8 @@
     "@vitejs/plugin-react": "^4.0.1",
     "concurrently": "^8.2.0",
     "eslint": "^8.44.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
     "husky": "^8.0.3",
