configuracion de cypress y husky precommit

--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint.fix": "eslint . --ext ts,tsx --fix",
     "preview": "vite preview",
+    "tsc": "tsc --noEmit",
+    "tsc:watch": "tsc --noEmit --watch",
+    "e2e": "cypress open",
+    "e2e:run": "cypress run",
+    "precommit": "concurrently --raw \"tsc\" && lint-staged",
     "format": "prettier --write .",
     "checks": "prettier --check .",
     "prepare": "husky install"
@@ -36,6 +41,7 @@
     "@typescript-eslint/parser": "^5.61.0",
     "@vitejs/plugin-react": "^4.0.1",
     "concurrently": "^8.2.0",
+    "cypress": "^12.17.3",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.0.0",
