--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -14,6 +14,10 @@ env:
 jobs:
   checks:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
+      repository-projects: write
     steps:
       - run: echo "starting checks 👀 triggered by a ${{ github.event_name }} in ${{ github.ref }}."
 
