--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "src/**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.1.7",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-react": "^7.33.0",
+    "framer-motion": "^10.16.1",
     "jest": "^29.6.1",
     "lint-staged": "^13.2.3",
     "react": "^18.2.0",
@@ -41,6 +43,7 @@
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "@vitejs/plugin-react": "^4.0.1",
+    "autoprefixer": "^10.4.15",
     "concurrently": "^8.2.0",
     "cypress": "^12.17.3",
     "eslint": "^8.44.0",
@@ -49,7 +52,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
     "husky": "^8.0.3",
+    "postcss": "^8.4.28",
     "prettier": "3.0.0",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.0"
   },
