--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "framer-motion": "^10.16.1",
     "jest": "^29.6.1",
     "lint-staged": "^13.2.3",
+    "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
