--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "prepush": "lint-staged",
     "format": "prettier --write .",
     "checks": "prettier --check .",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "toc": "i18next-resources-for-ts toc -i ./public/translations -o ./src/@types/resources.ts"
   },
   "lint-staged": {
     "src/**/*": "prettier --write --ignore-unknown"
@@ -32,11 +33,16 @@
     "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-react": "^7.33.0",
     "framer-motion": "^10.16.1",
+    "i18next": "^23.5.0",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-http-backend": "^2.2.2",
+    "i18next-resources-for-ts": "^1.3.3",
     "jest": "^29.6.1",
     "lint-staged": "^13.2.3",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-i18next": "^13.2.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
@@ -48,6 +54,7 @@
     "concurrently": "^8.2.0",
     "cypress": "^12.17.3",
     "eslint": "^8.44.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
