--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "format": "prettier --write .",
     "checks": "prettier --check .",
     "prepare": "husky install",
-    "toc": "i18next-resources-for-ts toc -i ./public/translations -o ./src/@types/resources.ts"
+    "toc": "i18next-resources-for-ts toc -i ./src/assets/translations -o ./src/@types/resources.ts"
   },
   "lint-staged": {
     "src/**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
     "@nextui-org/react": "^2.1.7",
+    "@types/react-copy-to-clipboard": "^5.0.7",
+    "@types/validator": "^13.11.9",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-react": "^7.33.0",
@@ -41,8 +43,13 @@
     "lint-staged": "^13.2.3",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^13.2.2"
+    "react-i18next": "^13.2.2",
+    "react-icons": "^5.0.1",
+    "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.5",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
